# bubble_simulation

./: pyproject.toml
bubble_simulation/: Untitled.ipynb  Untitled1.ipynb  analysis_pipeline.py  settings.py
bubble_simulation/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
bubble_simulation/content/: __init__.py  content_universe.py  item.py
bubble_simulation/plotting/: visualization.py
bubble_simulation/recommenders/: __init__.py  base.py  collaborative.py  popularity.py  reinforcement.py
bubble_simulation/simulation/: metrics.py  simulator.py
bubble_simulation/users/: __init__.py  engagement_model.py  user.py  user_universe.py
tests/: test_base_recommender.py  test_collaborative_recommender.py  test_content_module.py  test_metrics.py  test_popularity_recommender.py  test_rl_recommender.py  test_simulator.py  test_user_module.py
