[tool.poetry]
name = "bubble-simulation"
version = "0.1.0"
description = ""
authors = ["Arun Ravishankar <arunravishankar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
jupyterlab = "^4.4.2"
pytest = "^8.3.5"
pandas = "^2.2.3"
numpy = "^2.2.6"
black = "^25.1.0"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
plotly = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
